force-app/main/default/objects/Account/fields/Billing_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Legal_Entity__c</fullName>
    <inlineHelpText>Should Default to Account Name</inlineHelpText>
    <label>Billing Legal Entity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>