force-app/main/default/objects/Account/fields/CB_Investments__c.field-meta.xml
<CustomField>
    <fullName>CB_Investments__c</fullName>
    <description>Crunchbase: total investment count.</description>
    <label>CB # Investments</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>