force-app/main/default/objects/Account/fields/CB_Lead_Investments__c.field-meta.xml
<CustomField>
    <fullName>CB_Lead_Investments__c</fullName>
    <description>Crunchbase: number of investments led.</description>
    <label>CB # Lead Investments</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>