force-app/main/default/objects/Account/fields/CB_Twitter__c.field-meta.xml
<CustomField>
    <fullName>CB_Twitter__c</fullName>
    <label>CB Twitter</label>
    <type>Url</type>
</CustomField>