force-app/main/default/objects/Account/fields/Conflict_Flag__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this fund has invested in Auctor or another known conflict.</description>
    <label>Conflict Flag</label>
    <type>Checkbox</type>
</CustomField>