force-app/main/default/objects/Account/fields/Conflict_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Notes__c</fullName>
    <description>Which portfolio company creates the conflict.</description>
    <label>Conflict Notes</label>
    <type>TextArea</type>
</CustomField>