force-app/main/default/objects/Account/fields/Fund_Status__c.field-meta.xml
<CustomField>
    <fullName>Fund_Status__c</fullName>
    <label>Fund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Deploying</fullName>
            </value>
            <value>
                <fullName>Raising New Fund</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>