force-app/main/default/objects/Account/fields/Geo_Focus__c.field-meta.xml
<CustomField>
    <fullName>Geo_Focus__c</fullName>
    <label>Geo Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>LatAm</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>MENA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>