force-app/main/default/objects/Account/fields/Instagram_Handle__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Handle__c</fullName>
    <label>Instagram Handle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>