force-app/main/default/objects/Account/fields/Investor_Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Investor_Pipeline_Stage__c</fullName>
    <description>Account-level pipeline status, independent of any particular round. Use this for the question "where do we stand with this fund overall?" Round-specific status lives on the Opportunity.</description>
    <label>Investor Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Warm Path Identified</fullName>
            </value>
            <value>
                <fullName>Outreach Sent</fullName>
            </value>
            <value>
                <fullName>In Conversation</fullName>
            </value>
            <value>
                <fullName>Met - Follow-up Needed</fullName>
            </value>
            <value>
                <fullName>Disqualified - Wrong Fit</fullName>
            </value>
            <value>
                <fullName>Disqualified - Wrong Sector</fullName>
            </value>
            <value>
                <fullName>Disqualified - Inactive</fullName>
            </value>
            <value>
                <fullName>Low Priority</fullName>
            </value>
            <value>
                <fullName>Needs Re-Research</fullName>
            </value>
            <value>
                <fullName>Future - Later Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>