force-app/main/default/objects/Account/fields/Investor_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Investor_Subtype__c</fullName>
    <label>Investor Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emerging Manager</fullName>
            </value>
            <value>
                <fullName>Solo GP</fullName>
            </value>
            <value>
                <fullName>Single-Family Office</fullName>
            </value>
            <value>
                <fullName>Multi-Family Office</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Diverse-Founder Focus</fullName>
            </value>
            <value>
                <fullName>Generalist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>