force-app/main/default/objects/Account/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>CVC</fullName>
            </value>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Angel</fullName>
            </value>
            <value>
                <fullName>Angel Network</fullName>
            </value>
            <value>
                <fullName>Syndicate</fullName>
            </value>
            <value>
                <fullName>Ecosystem Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>