force-app/main/default/objects/Account/fields/kognoz1__Invoiced_Total__c.field-meta.xml
<CustomField>
    <fullName>kognoz1__Invoiced_Total__c</fullName>
    <label>Invoiced Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>