force-app/main/default/objects/Account/fields/kognoz1__Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>kognoz1__Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>