force-app/main/default/objects/Account/fields/kognoz1__SalesTerm__c.field-meta.xml
<CustomField>
    <fullName>kognoz1__SalesTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesTerm</label>
    <referenceTo>kognoz1__SalesTerm__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>