force-app/main/default/objects/Account/fields/Last_Validated__c.field-meta.xml
<CustomField>
    <fullName>Last_Validated__c</fullName>
    <description>Date this fund's data was last refreshed via Exa enrichment or manual research.</description>
    <label>Last Validated</label>
    <type>Date</type>
</CustomField>