force-app/main/default/objects/Account/fields/Other_Social__c.field-meta.xml
<CustomField>
    <fullName>Other_Social__c</fullName>
    <inlineHelpText>Add Prefix for Channel - e.g., F@examplehandle, T@tiktokhandle

F - Facebook, T - Tiktok, etc.</inlineHelpText>
    <label>Other Social</label>
    <length>50</length>
    <type>Text</type>
</CustomField>