force-app/main/default/objects/Account/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investor Contacts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>