force-app/main/default/objects/Account/fields/Stage_Focus__c.field-meta.xml
<CustomField>
    <fullName>Stage_Focus__c</fullName>
    <label>Stage Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C+</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Stage-Agnostic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>