force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <inlineHelpText>National Tax ID</inlineHelpText>
    <label>Tax ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>