force-app/main/default/objects/Account/fields/Thesis_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Fit_Score__c</fullName>
    <description>Stable score 1-25 reflecting thesis alignment. Does not change across funding rounds. Round-relative priority lives on the Opportunity Round Fit field.</description>
    <label>Thesis Fit Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>