force-app/main/default/objects/Account/fields/Thesis_Tags__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Tags__c</fullName>
    <description>Free-text thesis or sector tags (e.g., "AI infra, vertical SaaS, LatAm").</description>
    <label>Thesis / Sector Tags</label>
    <type>TextArea</type>
</CustomField>