force-app/main/default/objects/Account/fields/Validation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Validation_Notes__c</fullName>
    <description>Long-form research notes from Exa enrichment, conversations, news, and reclassification reasons.</description>
    <label>Validation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>