force-app/main/default/objects/Account/fields/Warm_Path__c.field-meta.xml
<CustomField>
    <fullName>Warm_Path__c</fullName>
    <description>Free-text summary of who can introduce us into this fund.</description>
    <label>Warm Path</label>
    <type>TextArea</type>
</CustomField>