force-app/main/default/objects/Account/fields/X_Twitter_Profile__c.field-meta.xml
<CustomField>
    <fullName>X_Twitter_Profile__c</fullName>
    <description>company twitter profile if any</description>
    <inlineHelpText>include @[X Handle]</inlineHelpText>
    <label>X (Twitter) Handle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>