force-app/main/default/objects/Account/recordTypes/Investor_Fund.recordType-meta.xml
<RecordType>
    <fullName>Investor_Fund</fullName>
    <active>true</active>
    <description>Investor fund (VC, Family Office, CVC, Accelerator, Angel, etc.) tracked for fundraising outreach.</description>
    <label>Investor Fund</label>
</RecordType>