force-app/main/default/objects/Account/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <description>Direct Sales Businesses</description>
    <label>End Customer</label>
</RecordType>